third commit.2; added background & fixed spacing

--- a/style.css
+++ b/style.css
@@ -95,11 +95,18 @@ h1{
     border-radius: 4%;
 }
 
+#empty{
+    width: 100vw;
+    height: 25vh;
+}
+
 #albums{
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
+    width: 100vw;
+    background-color: rgb(244, 236, 250);
     /* text-align: center; */
 }
 
@@ -182,7 +189,6 @@ h1{
     main{
         width: 85vw;
     }
-    
     .cards{
         display: flex;
         flex-wrap: wrap;
@@ -198,6 +204,9 @@ h1{
     }
     .member-card img, .play img, .play{
         width: 30vw;
+    }
+    #empty{
+        height: 17vh;
     }
 }
 
